--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -48,7 +48,11 @@
                                                 <i class="fas fa-tasks"></i> Тесты
                                             </a>
                                         </li>
-                                        <li><hr class="dropdown-divider"></li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="TeacherDashboard" asp-action="Index">
+                                                <i class="fas fa-tachometer-alt"></i> Мониторинг
+                                            </a>
+                                        </li>
                                         <li>
                                             <a class="dropdown-item" asp-controller="Material" asp-action="Index">
                                                 <i class="fas fa-book"></i> Материалы
