--- a/OnlineTutor2/Views/StudentTest/TakeSpelling.cshtml
+++ b/OnlineTutor2/Views/StudentTest/TakeSpelling.cshtml
@@ -8,7 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb breadcrumb-compact">
             <li class="breadcrumb-item">
-                <a asp-controller="Student" asp-action="Tests">Мои тесты</a>
+                <a asp-controller="StudentTest" asp-action="Index">Мои тесты</a>
             </li>
             <li class="breadcrumb-item active">@Model.TestResult.SpellingTest.Title</li>
         </ol>
