--- a/OnlineTutor2/Views/SpellingTest/Create.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Create.cshtml
@@ -49,15 +49,36 @@
                         </legend>
 
                         <div class="mb-3">
-                            <label asp-for="ClassId" class="form-label">
-                                <i class="fas fa-graduation-cap"></i> Назначить классу
+                            <label class="form-label">
+                                <i class="fas fa-graduation-cap"></i> Назначить классам
                             </label>
-                            <select asp-for="ClassId" asp-items="@ViewBag.Classes" class="form-select">
-                                <option value="">Доступен всем ученикам</option>
-                            </select>
-                            <span asp-validation-for="ClassId" class="text-danger"></span>
+                            <div class="border rounded p-3 bg-light">
+                                @if (ViewBag.Classes != null && ((SelectList)ViewBag.Classes).Any())
+                                {
+                                    @foreach (var classItem in (SelectList)ViewBag.Classes)
+                                    {
+                                        <div class="form-check">
+                                            <input class="form-check-input" 
+                                                   type="checkbox" 
+                                                   name="SelectedClassIds" 
+                                                   value="@classItem.Value" 
+                                                   id="class_@classItem.Value" />
+                                            <label class="form-check-label" for="class_@classItem.Value">
+                                                @classItem.Text
+                                            </label>
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+                                    <p class="text-muted mb-0">
+                                        <i class="fas fa-info-circle"></i> У вас пока нет активных классов.
+                                        <a asp-controller="Class" asp-action="Create">Создать класс</a>
+                                    </p>
+                                }
+                            </div>
                             <div class="form-text">
-                                <i class="fas fa-lightbulb"></i> Можно изменить позже
+                                <i class="fas fa-lightbulb"></i> Можно выбрать несколько классов. Если не выбрать ни одного, тест будет доступен всем ученикам.
                             </div>
                         </div>
                     </fieldset>
